<resources>
    <string name="app_name">SamacharApp</string>
    <string name="OpenNavigation" />
    <string name="CloseNavigation" />
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="share">Share</string>
    <string name="profile">Profile</string>
    <string name="news_image">News Image</string>
    <string name="sample_description_goes_here">Sample description goes here.</string>
    <string name="sample_title">Sample Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_we_offer_breaking_news_alerts_curated_stories_tailored_to_your_interests_offline_reading_for_news_on_the_go_multi_language_support_dark_mode_for_night_readers">🔍  <b>What We Offer  </b>: \nBreaking News Alerts\n Curated Stories tailored to your interests.\nOffline Reading for news on the go Multi-language Support\n Dark Mode for night readers</string>
    <string name="samachar_application_brings_you_the_latest_headlines_from_around_the_world_delivered_fast_accurately_and_without_the_noise_whether_you_re_into_politics_tech_entertainment_sports_or_global_affairs_newspulse_curates_real_time_news_from_trusted_sources_so_you_stay_informed_and_ahead_of_the_curve"> <b>Samachar Application  </b>brings you the latest headlines from around the world—delivered fast, accurately, and without the noise. Whether you\'re into politics, tech, entertainment, sports, or global affairs, NewsPulse curates real-time news from trusted sources so you stay informed and ahead of the curve.</string>
    <string name="our_promise_we_value_journalistic_integrity_and_we_re_committed_to_providing_news_that_is_factual_balanced_and_free_from_bias_or_clickbait">🛡️  <b>Our Promise :  </b>We value journalistic integrity, and we’re committed to providing news that is factual, balanced, and free from bias or clickbait.</string>
    <string name="contact_us_got_feedback_questions_or_suggestions_we_d_love_to_hear_from_you_whether_you_re_reporting_a_bug_requesting_a_new_feature_or_just_want_to_share_your_thoughts_your_input_helps_us_improve_and_grow_we_value_every_message_and_do_our_best_to_respond_as_quickly_as_possible">📬<b> Contact Us :</b>\n Got feedback, questions, or suggestions? We’d love to hear from you! Whether you\'re reporting a bug, requesting a new feature, or just want to share your thoughts — your input helps us improve and grow. We value every message and do our best to respond as quickly as possible.</string>
    <string name="address_newspulse_media_pvt_ltd_123_innovation_street_sector_21_tech_city_new_delhi_110001_india_support_hours_monday_to_friday_9_00_am_6_00_pm_ist">📍 <b> Address : Samachar App Pvt.</b> Ltd. 123 Innovation Street, \nSector 21, Tech City, \nNew Delhi, 110001, India \n🕒 Support Hours: Monday to Friday, \n9:00 AM – 6:00 PM (IST)</string>
    <string name="_2025_newspulse_all_rights_reserved_unauthorized_reproduction_or_distribution_of_any_content_is_strictly_prohibited">© 2025 NewsPulse. All rights reserved. Unauthorized reproduction or distribution of any content is strictly prohibited.</string>
    <string name="language">Language</string>
</resources>